--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "keywords": [],
   "dependencies": {
     "6typescalculator": "^1.0.0",
+    "chalk": "^5.3.0",
     "inquirer": "^9.2.16"
   },
   "devDependencies": {
